data/forge_javadoc/1.9.4/processed/net_minecraft_item_ItemMap.md
# ItemMap

**Inheritance:** java.lang.Object → net.minecraftforge.fml.common.registry.IForgeRegistryEntry.Impl<Item> → net.minecraft.item.Item → net.minecraft.item.ItemMapBase → net.minecraft.item.ItemMap

## Class signature

```java
public class ItemMap extends ItemMapBase
```

## Methods

- `void addInformation(ItemStack stack, EntityPlayer playerIn, java.util.List<java.lang.String> tooltip, boolean advanced)`
- `Packet<?> createMapDataPacket(ItemStack stack, World worldIn, EntityPlayer player)`
- `protected static void enableMapTracking(ItemStack p_185064_0_, World p_185064_1_)`
- `MapData getMapData(ItemStack stack, World worldIn)`
- `static MapData loadMapData(int mapId, World worldIn)`
- `void onCreated(ItemStack stack, World worldIn, EntityPlayer playerIn)`
- `void onUpdate(ItemStack stack, World worldIn, Entity entityIn, int itemSlot, boolean isSelected)`
- `protected static void scaleMap(ItemStack p_185063_0_, World p_185063_1_, int p_185063_2_)`
- `void updateMapData(World worldIn, Entity viewer, MapData data)`

## Fields

- `protected ItemMap`